Stop menu text from overflowing

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body {
 	list-style: none;
 	text-align: center;
 	margin: 2rem;
+	overflow: hidden;
 }
 
 .burger {
